added sounds and favicon to the page

--- a/index.html
+++ b/index.html
@@ -1,17 +1,19 @@
 <!DOCTYPE html>
 <html>
-  <head lang="en">
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width,initial-scale=1" />
-    <title>Snake v8</title>
-    <!-- Link our styles from snake_game.css -->
-    <link rel="stylesheet" type="text/css" href="./lib/assets/stylesheets/index.css" />
-  </head>
-  <body>
-    <!-- #gameContainer is the main game board-->
-    <div id="gameContainer"></div>
+
+<head lang="en">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>Snake</title>
+  <link rel="stylesheet" type="text/css" href="./lib/assets/stylesheets/index.css" />
+  <link rel="SHORTCUT ICON" href="./lib/assets/img/snakeheaddown.png" type="image/x-icon">
+</head>
+
+<body>
+  <div id="gameContainer"></div>
 
 
   <!-- #Load our snake_game.js containing the game logic -->
   <script src="./lib/index.js"></script>
+
 </html>
